# sensevoice-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: basic_benchmark.rs
examples/: basic.rs  official_model_pt.rs  stream.rs
src/: asr_candle.rs  asr_candle_pt.rs  config.rs  lib.rs  model_pt.rs  silero_vad.rs  wavfrontend.rs
