[package]
name = "sensevoice-rs"
version = "0.1.4"
edition = "2021"
description = "A Rust-based, SenseVoiceSmall "
homepage = "https://github.com/darkautism/sensevoice-rs"
license = "MIT"

[patch.crates-io]
#rknn-rs = { path = "../rknn-rs"}
#voice_activity_detector = { path = "../voice_activity_detector"}

[dependencies]
kaldi-fbank-rust-kautism = "0.1.0"
rknn-rs = { version = "0.1.2", optional = true }
hound = "3.5.1"
ndarray = { version="0.17.1", features=["rayon"]}
ndarray-npy = "0.9.1"
sentencepiece = "0.12.0"
ndarray-stats = "0.6.0"
rayon = "1.11.0"
hf-hub = "0.4.3"
regex = "1.12.2"
voice_activity_detector = "0.2.1"
futures = { version = "0.3.31", optional = true }
async-stream = { version = "0.3.6", optional = true }
ort = { version = "2.0.0-rc.10", features = ["ndarray", "load-dynamic"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
futures = "0.3.31"

[features]
default = []
stream = ["futures", "async-stream"]
rknpu = ["dep:rknn-rs"]

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["coreml", "ndarray", "load-dynamic"] }
