[package]
name = "sensevoice-rs"
version = "0.1.5"
edition = "2021"
description = "A Rust-based, SenseVoiceSmall "
homepage = "https://github.com/darkautism/sensevoice-rs"
license = "MIT"

[dependencies]
kaldi-fbank-rust-kautism = "0.1.0"
rknn-rs = { version = "0.2.1", optional = true }
hound = "3.5.1"
ndarray = { version="0.17.2", features=["rayon"]}
ndarray-npy = "0.10.0"
sentencepiece = "0.13.1"
ndarray-stats = "0.7.0"
rayon = "1.11.0"
hf-hub = "0.4.3"
regex = "1.12.3"
futures = { version = "0.3.32", optional = true }
async-stream = { version = "0.3.6", optional = true }
candle = { package = "candle-core", version = "0.9.2" }
candle-nn = "0.9.2"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.32"

[features]
default = ["rknpu"]
stream = ["futures", "async-stream"]
rknpu = ["dep:rknn-rs"]
